10/18/18
- removed java installation, using $CLARA_HOME jre distribution instead

10/17/18
- added java installation
- fixed docker image name
- added clara and coatjava installation and their tag
- added reconstruction env variables

10/10/18
- better documentation

10/2/2018
- basing dockerfile on gemcbatch docker
- improved environment
- removed unnecessary directives and jlab.sh file

9/10/18
- linked to docker
- added condor documentation and template submit file

9/2/18
- initial commit
