@@ -1,0 +1,63 @@
+io-services:
+  reader:
+    class: org.jlab.clas.std.services.convertors.HipoToHipoReader
+    name: HipoToHipoReader
+  writer:
+    class: org.jlab.clas.std.services.convertors.HipoToHipoWriter
+    name: HipoToHipoWriter
+services:
+  - class: org.jlab.clas.swimtools.MagFieldsEngine
+    name: MAGFIELDS
+  - class: org.jlab.rec.ft.cal.FTCALEngine
+    name: FTCAL
+  - class: org.jlab.rec.ft.hodo.FTHODOEngine
+    name: FTHODO
+  - class: org.jlab.rec.ft.FTEBEngine
+    name: FTEB
+  - class: org.jlab.service.dc.DCHBEngine
+    name: DCHB
+  - class: org.jlab.service.ftof.FTOFHBEngine
+    name: FTOFHB
+  - class: org.jlab.service.ec.ECEngine
+    name: EC
+  - class: org.jlab.rec.cvt.services.CVTReconstruction
+    name: CVT
+  - class: org.jlab.service.ctof.CTOFEngine
+    name: CTOF
+#  - class: org.jlab.service.cnd.CNDEngine
+  - class: org.jlab.service.cnd.CNDCalibrationEngine
+    name: CND
+  - class: org.jlab.service.htcc.HTCCReconstructionService
+    name: HTCC
+  - class: org.jlab.service.ltcc.LTCCEngine
+    name: LTCC
+  - class: org.jlab.rec.rich.RICHEBEngine
+    name: RICH
+  - class: org.jlab.service.eb.EBHBEngine
+    name: EBHB
+  - class: org.jlab.service.dc.DCTBEngine
+    name: DCTB
+  - class: org.jlab.service.ftof.FTOFTBEngine
+    name: FTOFTB
+  - class: org.jlab.service.eb.EBTBEngine
+    name: EBTB
+configuration:
+  io-services:
+    writer:
+      compression: 2
+      schema_dir: "/jlab/2.3/claraHome/plugins/clas12/etc/bankdefs/dst"
+# settings below are for GEMC, compatible with 4a.2.5
+  services:
+    MAGFIELDS:
+      solenoidMap: Symm_solenoid_r601_phi1_z1201_13June2018.dat
+      torusMap: Symm_torus_r2501_phi16_z251_24Apr2018.dat
+      solenoidShift: "0.0"
+      torusXShift: "0.0"
+      torusYShift: "0.0"
+      torusZShift: "0.0"
+    DCHB:
+      useStartTime: "true"
+      wireDistortionsFlag: "false"
+
+mime-types:
+  - binary/data-hipo
